; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/drm2/extr_drm_modes.c_drm_mode_duplicate.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/drm2/extr_drm_modes.c_drm_mode_duplicate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.drm_display_mode = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.drm_display_mode* @drm_mode_duplicate(%struct.drm_device* %0, %struct.drm_display_mode* %1) #0 {
  %3 = alloca %struct.drm_display_mode*, align 8
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca %struct.drm_display_mode*, align 8
  %6 = alloca %struct.drm_display_mode*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store %struct.drm_display_mode* %1, %struct.drm_display_mode** %5, align 8
  %7 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %8 = call %struct.drm_display_mode* @drm_mode_create(%struct.drm_device* %7)
  store %struct.drm_display_mode* %8, %struct.drm_display_mode** %6, align 8
  %9 = load %struct.drm_display_mode*, %struct.drm_display_mode** %6, align 8
  %10 = icmp ne %struct.drm_display_mode* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store %struct.drm_display_mode* null, %struct.drm_display_mode** %3, align 8
  br label %17

12:                                               ; preds = %2
  %13 = load %struct.drm_display_mode*, %struct.drm_display_mode** %6, align 8
  %14 = load %struct.drm_display_mode*, %struct.drm_display_mode** %5, align 8
  %15 = call i32 @drm_mode_copy(%struct.drm_display_mode* %13, %struct.drm_display_mode* %14)
  %16 = load %struct.drm_display_mode*, %struct.drm_display_mode** %6, align 8
  store %struct.drm_display_mode* %16, %struct.drm_display_mode** %3, align 8
  br label %17

17:                                               ; preds = %12, %11
  %18 = load %struct.drm_display_mode*, %struct.drm_display_mode** %3, align 8
  ret %struct.drm_display_mode* %18
}

declare dso_local %struct.drm_display_mode* @drm_mode_create(%struct.drm_device*) #1

declare dso_local i32 @drm_mode_copy(%struct.drm_display_mode*, %struct.drm_display_mode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
